--- a/client/src/components/pages/login/login.component.css
+++ b/client/src/components/pages/login/login.component.css
@@ -27,3 +27,104 @@ form {
   padding: 10px;
   font-size: 22px;
 }
+
+#background {
+  height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
+ /* Flex Box */
+ .main-container > * {
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex: 1 0 auto;
+  /* min-height: 100vh; */
+  /* height: 100%; */
+  /* max-width: 100vw ; */
+  /* max-height: 100vh ; */
+}
+
+#header-container {
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: space-between !important;
+  /* min-width: 900px; */
+}
+
+/* #logo-container {
+  font-size: large;
+  margin-top: 50px;
+  margin-left: 50px;
+} */
+
+.title-container {
+  padding-top: 275px;
+  /* margin-top: 40px; */
+  /* min-width: 500px; */
+  /* padding-left: auto;
+  margin-left: auto; */
+}
+
+.login-container > * {
+  flex: 1 0 auto;
+  min-height: 50vh;
+  /* min-height: calc(100vh - 70px ); */
+  padding-top: 50px;
+  padding-right: 0px;
+  padding-bottom: 0;
+  padding-left: 0p; 
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.width-container {
+  min-width:350px;
+}
+
+.center {
+  display: flex !important;
+  flex-direction: row !important;
+  justify-content: space-between !important;
+}
+
+.text-align {
+  padding-top: 10px;
+}
+
+.field-size {
+  padding-top: 20px;
+}
+
+.field-color {
+  color: white !important;
+}
+
+.button-container {
+  padding-top: 20px;
+}
+
+.button-color {
+  background-color: #4374d0 !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+.footer {
+  flex-shrink: 0;
+  /* padding: 20px; */
+}
+
+.font-white {
+  color: white;
+}
+
+.font-grey {
+  color: grey;
+}
